--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </form>
         
     </div>
+    <script src="country_codes.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
